Fixed an issue where the gap in between the radio buttons and their labels on the page I was working on was too wide. Will need to test across difference devices, though.

--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Pages/ReserveATable.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Pages/ReserveATable.css
@@ -16,9 +16,10 @@
 
 #seatingChoice {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr auto;
     grid-template-rows: repeat(3, 1fr);
     gap: 0.5em;
+    justify-content: left;
     padding: 0;
     margin: 0;
     border: none;
